config yaml fix

--- a/utils/config.yaml
+++ b/utils/config.yaml
@@ -457,8 +457,7 @@ templates:
   jounral:
     entry: 
       Day: bafyreibftkf34iod7ufkawsyxq5f4gqwc6xrzv7gpt2udlzysnlyfdfmcy
-      Weekly - Focus: "bafyreicta4tsfuvoxls7yueq3oacj7op55s7htv6q74zptttk5fzy43jji
-      
+      Weekly - Focus: bafyreicta4tsfuvoxls7yueq3oacj7op55s7htv6q74zptttk5fzy43jji
 types:
   journal:
     Prompt: bafyreifo2ypf4ahoy3iz2azhnmq4naalrdealrnxtnfkaolm2vgjgi4isq
