--- a/utils/config.yaml
+++ b/utils/config.yaml
@@ -454,10 +454,12 @@ tags:
       id: bafyreibemq3utqfy4qtydchg7v3qpvs63h3sxmw75u5jsvxhah2t2unvna
       key: width_in_pixels
 templates:
-  jounral:
+  journal:
     entry: 
       Day: bafyreibftkf34iod7ufkawsyxq5f4gqwc6xrzv7gpt2udlzysnlyfdfmcy
       Weekly - Focus: bafyreicta4tsfuvoxls7yueq3oacj7op55s7htv6q74zptttk5fzy43jji
+    prompt:
+      Task Review: bafyreid4cuaf2b7x3car3humw5vxcnxjj7qq5uoya3txsx5jfq2znwvdv4
 types:
   journal:
     Prompt: bafyreifo2ypf4ahoy3iz2azhnmq4naalrdealrnxtnfkaolm2vgjgi4isq
