Better exception handling, space syncing, migrating simple objects with minimal markdown, better utils formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "sonarlint.connectedMode.project": {
         "connectionId": "pixelfromthemixery",
         "projectKey": "PixelFromTheMixery_anytype-automation"
-    }
+    },
+    "python.REPL.enableREPLSmartSend": false
 }
